14 Oct, 2017
update: Arcade and related files
update: index page forum posts, remove unneeded joins
fix: AJAX Chat kick/ban user
remove: destroy session from AJAX Chat so not logged out of site
fix: AJAX Chat endless loop when user is banned or disabled
remove: AJAX Chat channels from mysql
move: AJAX Chat online table to redis
move: AJAX Chat bans table to redis
begin: move AJAX-Chat from mysql to redis

9 Oct, 2017
remove: unneeded check for direct file access in files not in webroot
remove: geshi syntax highlighter
update: coders log
add: bbcode code for [code]

8 Oct, 2017
update: minified css and js files
remove: margin and padding on collapsed divs
remove: cleanup log
move: DB Backup config settings to db and site_config
remove: torrent.type from database
remove: torrent.username from database
update: pushed AJAX Chat to the borders
update: AJAX Chat to use same mysqli object as the rest of the site
add: anonymizer url to site settings and all links use this
add: simple logs viewer
remove: LogViewer
add: option to log all queries to the database
update: admin/site_config
remove: many inline style
update: index blocks -> torrents to uniform style
remove: excess borders on table-bordered

14 Sept, 2017
fix: cleanup manual run
fix: MOW
add: missing jquery-ui in merged and minified js files
fix: iCarousel centering
remove: navbar border radius along top

13 Sept, 2017
fix: iCarousel 3d

12 Sept, 2017
update: jquery.mousewheel.js
fix: scroller mouse scroll not scroll entire page
fix: themeChanger font color in iframes
update: css/js minified files
update: AJAX Chat links to behave same as the rest of the site
fix: blackjack cards incorrect info in sql table
fix: AJAX Chat log viewer
add: link to AJAX Chat log viewer
fix: overflow-y on index page

11 Sept, 2017
fix: back to top z-index
hide index page poll block when no poll
hide index page ie alert block if not using ie
index page more mobile friendly

11 Sept, 2017
replace js navbar with css navbar